tree-sitter-coalton/test/corpus/symbol.txt
================================================================================
Symbol
================================================================================

empty-p

--------------------------------------------------------------------------------

(program
  (symbol (symbol_name)))

================================================================================
Package qualified symbol
================================================================================

string::empty-p

--------------------------------------------------------------------------------

(program
  (symbol
    (symbol_package)
    (symbol_qualifier)
    (symbol_name)))

================================================================================
Division symbol
================================================================================

/

--------------------------------------------------------------------------------

(program
  (symbol
    (symbol_name)))

================================================================================
Package qualified division symbol
================================================================================

math:/

--------------------------------------------------------------------------------

(program
  (symbol
    (symbol_package)
    (symbol_qualifier)
    (symbol_name)))

================================================================================
List of symbols
================================================================================

(+ - * /)

--------------------------------------------------------------------------------

(program
  (list
    (symbol (symbol_name))
    (symbol (symbol_name))
    (symbol (symbol_name))
    (symbol (symbol_name))))
